@@ -48,6 +48,7 @@
 
     <!-- Designer functions -->
     <link id="css/Ext.ux.plugin.Designer.css" rel="stylesheet" type="text/css" href="css/Ext.ux.plugin.Designer.css" />
+	<script id="js/Ext.ux.tree.CodeLoader.js" type="text/javascript" src="js/Ext.ux.tree.CodeLoader.js"></script>
     <script id="js/Ext.ux.form.ScriptEditor.js" type="text/javascript" src="js/Ext.ux.form.ScriptEditor.js"></script>
     <script id="js/Ext.ux.grid.PropertyGrid.js" type="text/javascript" src="js/Ext.ux.grid.PropertyGrid.js"></script>
     <script id="js/Ext.ux.plugin.FileControl.js" type="text/javascript" src="js/Ext.ux.plugin.FileControl.js"></script>
