@@ -12,18 +12,20 @@ TODO
  - Update documentation
 ==> Problems after creating GUID 2.1 
  - Make it possible to load more then one component tree and make this version depended
+ - Simplify the code used for Ext.ux.grid.PropertyGrid.
  
  Change History:
  Version 2.1.0:
   + Added a new json parser therefor begin and end tags are no longer needed in code
-  + Visual resize added for active element
-  + Visual move of element in absolute layout
+  + Visual resize added activated by context menu
+  + Visual move of element in absolute layout activated by context menu
   + All xtypes which are loaded before guidesigner is load are now selectable
   + Found a good solotion for property grid error
   + Split single javascript files containing multiple classes into files
   + Added "scope.!<VAR>" in json object, so you can create local objects if they don't exist
   + Toolbox is forced to do a layout before showing.
   + Changed version of base ExtJs to 2.2 instead of 2.0, so it also works correlty on firefox 3.0
+  * Fixed redrawElement problem causing a blank screen to be shown
  
  Version 2.0.6:
   + Added PHPFile control thanks to Epsylon
